Syncing personal repository with organization's latest update

--- a/reviews/templates/reviews/feedback_forum_form.html
+++ b/reviews/templates/reviews/feedback_forum_form.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% comment %} Back do Forum {% endcomment %}
+{% comment %} Front do Forum {% endcomment %}
 
 {% load static %}
 {% block extra_styles %}
